--- a/schoolFrontend/src/app/components/login-modal/login-modal.component.html
+++ b/schoolFrontend/src/app/components/login-modal/login-modal.component.html
@@ -1,30 +1,35 @@
-<div (show.bs.modal)="setForm()" class="modal fade" id="exampleModalToggle2" aria-hidden="true"
-    aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h3 class="modal-title" id="exampleModalToggleLabel2">{{(modalProps$ | async)?.title}}</h3>
-                <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
-            </div>
-            <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm)" class="modal-body">
-                <input formControlName="email" type="email" class="form-control" placeholder="Email">
-                <input formControlName="password" type="password" class="form-control" placeholder="Password">
-                <small *ngIf="loginFailed" class="text-danger">Wrong email or password</small>
-                <div (click)="btnClicked = true" class="btn-wrp">
-                    <button class="btn btn-dark px-4" type="submit" [disabled]="loginForm.invalid">
-                        <span *ngIf="!loading">Continue</span>
-                        <svg *ngIf="loading" class="spinner" viewBox="0 0 50 50">
-                            <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
-                        </svg>
-                    </button>
-                </div>
-            </form>
-            <div class="modal-footer">
-                <span>
-                    Not a member yet?
-                    <a href="#exampleModalToggle" data-bs-toggle="modal" role="button">Register</a>
-                </span>
-            </div>
+<div
+  (show.bs.modal)="setForm()"
+  class="modal fade"
+  id="exampleModalToggle2"
+  aria-hidden="true"
+  aria-labelledby="exampleModalToggleLabel2"
+  tabindex="-1"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalToggleLabel2">{{ (modalProps$ | async)?.title }}</h3>
+      </div>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm)" class="modal-body">
+        <input formControlName="email" type="email" class="form-control" placeholder="Email" />
+        <input formControlName="password" type="password" class="form-control" placeholder="Password" />
+        <small *ngIf="loginFailed" class="text-danger">Wrong email or password</small>
+        <div (click)="btnClicked = true" class="btn-wrp">
+          <button class="btn btn-dark px-4" type="submit" [disabled]="loginForm.invalid">
+            <span *ngIf="!loading">Continue</span>
+            <svg *ngIf="loading" class="spinner" viewBox="0 0 50 50">
+              <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+            </svg>
+          </button>
         </div>
+      </form>
+      <div class="modal-footer">
+        <span>
+          Not a member yet?
+          <a href="#exampleModalToggle" data-bs-toggle="modal" role="button">Register</a>
+        </span>
+      </div>
     </div>
+  </div>
 </div>
