--- a/schoolFrontend/src/app/pages/academics/course-list/course-list.component.scss
+++ b/schoolFrontend/src/app/pages/academics/course-list/course-list.component.scss
@@ -1,7 +1,7 @@
 .grid-cont {
     display: grid;
     grid-template-columns: repeat(auto-fill, 300px);
-    grid-gap: 1rem;
+    gap: 1rem;
     justify-content: center;
 
     h2 {
