--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -1,26 +1,11 @@
 <ng-container *ngIf="klass; else loading">
   <div class="container">
     <div class="big-wrap">
-      <div id="class-wrp" class="bg-light rounded shadow fake-border">
-        <h4 class="mt-3 mb-4 mx-3">My Class</h4>
-        <div id="student-wrp">
-          <div id="student" *ngFor="let teacher of klass!.teachers">
-            <div id="avatar-box">
-              <img [src]="teacher.avatar" alt="" />
-            </div>
-            <a class="color fw-bold"
-              >{{ teacher.name }} {{ teacher.surname
-              }}<span *ngFor="let module of teacher.modules"> - {{ module }}</span></a
-            >
-          </div>
-          <div id="student" *ngFor="let student of klass!.students">
-            <div id="avatar-box">
-              <img [src]="student.avatar" alt="" />
-            </div>
-            <p>{{ student.name }} {{ student.surname }}</p>
-          </div>
-        </div>
-      </div>
+      <app-klass-list
+        [klass]="klass"
+        id="class-wrp"
+        class="bg-light rounded shadow fake-border"
+      ></app-klass-list>
 
       <app-calendar [klass]="klass" class="bg-light rounded shadow fake-border"></app-calendar>
 
