--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.scss
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.scss
@@ -63,7 +63,7 @@
             text-overflow: ellipsis;
 
             &:hover {
-                opacity: .7;
+                filter: brightness(.7);
             }
         }
 
