--- a/schoolFrontend/src/app/components/calendar/calendar.component.scss
+++ b/schoolFrontend/src/app/components/calendar/calendar.component.scss
@@ -40,8 +40,8 @@
         border-radius: 10rem;
         transition: all .3s ease;
 
-        &:hover {
-            background-color: red;
+        &:hover:not(.active-day) {
+            background-color: rgb(255, 110, 110);
             color: white;
         }
     }
