--- a/schoolFrontend/src/app/pages/assignment/assignment.component.html
+++ b/schoolFrontend/src/app/pages/assignment/assignment.component.html
@@ -1,27 +1,37 @@
 <div *ngIf="!confirmation; else confDialog" class="container">
   <form
-    *ngIf="assignment | async as assignment; else pageLoading"
+    *ngIf="assignment$ | async as ass; else pageLoading"
     [formGroup]="linkForm"
     (ngSubmit)="onSubmit(linkForm)"
     class="modal-body container inner-cont shadow rounded"
   >
-    <h3>{{ assignment.title }}</h3>
-    <h5 class="text-primary">{{ assignment.module }}</h5>
-    <p>{{ assignment.caption }}</p>
-    <p>Due: {{ assignment.dueDate }}</p>
+    <h3>{{ ass.title }}</h3>
+    <h5 class="text-primary">{{ ass.module }}</h5>
+    <p>{{ ass.caption }}</p>
+    <p>Due: {{ ass.dueDate }}</p>
     <h5>Grade: {{ complAssignment && complAssignment.grade > 0 ? complAssignment!.grade : '' }}</h5>
 
     <label for="link" class="mt-4">Assignment Link</label>
-    <input formControlName="link" type="url" class="form-control" placeholder="Link" id="link" />
+    <a
+      *ngIf="ass.dueDate == 'Expired'; else notExpired"
+      [href]="['http://' + complAssignment?.link]"
+      target="_blank"
+      class="d-block my-2"
+    >
+      {{ complAssignment?.link }}
+    </a>
+    <ng-template #notExpired>
+      <input formControlName="link" type="url" class="form-control" placeholder="Link" id="link" />
 
-    <div class="btn-wrp">
-      <button class="btn btn-dark px-4" type="submit" [disabled]="linkForm.invalid">
-        <span *ngIf="!loading"><i class="bi bi-cloud-arrow-up"></i> Upload</span>
-        <svg *ngIf="loading" class="spinner" viewBox="0 0 50 50">
-          <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
-        </svg>
-      </button>
-    </div>
+      <div class="btn-wrp">
+        <button class="btn btn-dark px-4" type="submit" [disabled]="linkForm.invalid">
+          <span *ngIf="!loading"><i class="bi bi-cloud-arrow-up"></i> Upload</span>
+          <svg *ngIf="loading" class="spinner" viewBox="0 0 50 50">
+            <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
+          </svg>
+        </button>
+      </div>
+    </ng-template>
   </form>
 
   <ng-template #pageLoading>
