--- a/schoolFrontend/src/app/pages/teacher-dashboard/klass/klass.component.scss
+++ b/schoolFrontend/src/app/pages/teacher-dashboard/klass/klass.component.scss
@@ -92,7 +92,7 @@ app-klass-list {
     }
 }
 
-.assignment-done {
+.assignment-assessed {
     text-decoration: line-through;
     text-decoration-thickness: 1px;
     opacity: .5;
