--- a/schoolFrontend/src/app/components/klass-list/klass-list.component.html
+++ b/schoolFrontend/src/app/components/klass-list/klass-list.component.html
@@ -1,16 +1,22 @@
 <h4 class="mt-3 mb-4 mx-3">My Class</h4>
-<div id="student-wrp">
-  <div id="student" *ngFor="let teacher of klass!.teachers">
-    <div id="avatar-box">
+
+<div class="klass-member-wrp">
+  <h6 class="mx-3">Teachers</h6>
+  <a class="klass-member" *ngFor="let teacher of klass!.teachers">
+    <div class="avatar-box">
       <img [src]="teacher.avatar" alt="" />
     </div>
-    <a class="color fw-bold">
-      {{ teacher.name }} {{ teacher.surname
-      }}<span *ngFor="let module of teacher.modules"> - {{ module }}</span>
-    </a>
-  </div>
-  <div id="student" *ngFor="let student of klass!.students">
-    <div id="avatar-box">
+    <div class="teacher-text-wrp">
+      <span class="color fw-bold">
+        {{ teacher.name }} {{ teacher.surname }}
+      </span>
+      <span *ngFor="let module of teacher.modules" class="module">{{ module }}</span>
+    </div>
+  </a>
+  
+  <h6 class="mt-4 mx-3">Students</h6>
+  <div class="klass-member" *ngFor="let student of klass!.students">
+    <div class="avatar-box">
       <img [src]="student.avatar" alt="" />
     </div>
     <p>{{ student.name }} {{ student.surname }}</p>
