--- a/schoolFrontend/src/app/components/nav/nav.component.html
+++ b/schoolFrontend/src/app/components/nav/nav.component.html
@@ -38,42 +38,42 @@
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: true }"
               class="nav-link px-0 link-dark"
-              >Home</a
             >
+              Home
+            </a>
           </li>
           <li *ngIf="roles && (roles.includes('ROLE_STUDENT') || roles.includes('ROLE_TEACHER'))">
-            <a
-              [routerLink]="dashboardCondition()"
-              routerLinkActive="active"
-              class="nav-link px-0 link-dark"
-              >Dashboard</a
-            >
+            <a [routerLink]="dashboardCondition()" routerLinkActive="active" class="nav-link px-0 link-dark">
+              Dashboard
+            </a>
           </li>
           <li class="drop-link">
-            <a [routerLink]="['/academics']" routerLinkActive="active" class="nav-link px-0 link-dark"
-              >Academics</a
-            >
+            <a [routerLink]="['/academics']" routerLinkActive="active" class="nav-link px-0 link-dark">
+              Academics
+            </a>
             <ul class="drop-link-menu shadow border">
               <li>
                 <a
                   [routerLink]="['/academics/undergraduate']"
                   routerLinkActive="active"
                   class="nav-link px-0 link-dark"
-                  >Undergraduate</a
                 >
+                  Undergraduate
+                </a>
               </li>
               <li>
                 <a
                   [routerLink]="['/academics/graduate']"
                   routerLinkActive="active"
                   class="nav-link px-0 link-dark"
-                  >Graduate</a
                 >
+                  Graduate
+                </a>
               </li>
             </ul>
           </li>
           <li>
-            <a [routerLink]="['/g']" routerLinkActive="active" class="nav-link px-0 link-dark">About</a>
+            <a [routerLink]="['/g']" routerLinkActive="active" class="nav-link px-0 link-dark"> About </a>
           </li>
         </ul>
 
@@ -112,15 +112,15 @@
           <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
             <li><a [routerLink]="['/settings']" class="dropdown-item">Settings</a></li>
             <li>
-              <a [routerLink]="['/' + loggedUser.user.id + '/profile']" class="dropdown-item">Profile</a>
+              <a [routerLink]="['/' + loggedUser.user.id + '/profile']" class="dropdown-item"> Profile </a>
             </li>
-            <li *ngIf="roles && roles.includes('ROLE_ADMIN')">
-              <a [routerLink]="['/management']" class="dropdown-item">Manage Staff</a>
+            <li *ngIf="roles && (roles.includes('ROLE_ADMIN') || roles.includes('ROLE_STAFF'))">
+              <a [routerLink]="['/management']" class="dropdown-item"> Management </a>
             </li>
             <li>
               <hr class="dropdown-divider" />
             </li>
-            <li><a (click)="logout()" class="dropdown-item">Sign out</a></li>
+            <li><a (click)="logout()" class="dropdown-item"> Sign out </a></li>
           </ul>
           <button
             *ngIf="roles && roles.length <= 1 && roles.includes('ROLE_GUEST')"
