--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -4,13 +4,13 @@
       <app-klass-list
         [klass]="klass"
         id="class-wrp"
-        class="bg-light rounded shadow fake-border"
+        class="bg-white rounded shadow fake-border"
       ></app-klass-list>
 
-      <app-calendar [klass]="klass" class="bg-light rounded shadow fake-border"></app-calendar>
+      <app-calendar [klass]="klass" class="bg-white rounded shadow fake-border"></app-calendar>
 
       <div id="center">
-        <div class="bg-light rounded shadow fake-border">
+        <div class="bg-white rounded shadow fake-border">
           <h4 class="my-3 mx-3">{{ klass.course.info.name }}</h4>
           <hr />
           <div id="main">
@@ -25,7 +25,7 @@
           </div>
         </div>
 
-        <div class="bg-light rounded shadow fake-border">
+        <div class="bg-white rounded shadow fake-border">
           <div class="d-flex justify-content-between align-items-baseline my-3 mx-3">
             <h4>Assignments</h4>
             <a (click)="switchPage()" class="color">
