--- a/schoolFrontend/src/app/components/calendar/calendar.component.html
+++ b/schoolFrontend/src/app/components/calendar/calendar.component.html
@@ -51,9 +51,14 @@
       <div *ngFor="let hour of hours" class="text-muted">{{ hour }}</div>
     </div>
 
-    <div *ngIf="days | pureFn : lessonCondition" id="schedule">
-      <div #sched *ngFor="let scheItem of schedule">
-        {{ scheItem.module.name }}
+    <div id="schedule">
+      <div
+        #sched
+        *ngFor="let scheItem of daySchedule; let i = index"
+        [ngClass]="{ 'd-none': days | pureFn : lessonCondition : scheItem }"
+      >
+        <span *ngIf="scheItem.klassId" class="fw-bold"> Class: {{ scheItem.klassId }} </span>
+        <span> {{ scheItem.module.name }} </span>
       </div>
     </div>
   </div>
