--- a/schoolFrontend/src/app/components/calendar/calendar.component.scss
+++ b/schoolFrontend/src/app/components/calendar/calendar.component.scss
@@ -98,10 +98,15 @@
   > div {
     position: absolute;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     background-color: rgba(0, 255, 255, 0.25);
     border: 4px solid aqua;
+
+    span {
+      line-height: 1rem;
+    }
   }
 }
