--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -7,7 +7,7 @@
         class="bg-white rounded shadow fake-border"
       ></app-klass-list>
 
-      <app-calendar [klass]="klass" class="bg-white rounded shadow fake-border"></app-calendar>
+      <app-calendar [weeklySchedule]="weeklySchedule" class="bg-white rounded shadow fake-border"></app-calendar>
 
       <div id="center">
         <div class="bg-white rounded shadow fake-border">
