--- a/schoolFrontend/src/app/pages/teacher-dashboard/teacher-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/teacher-dashboard/teacher-dashboard.component.html
@@ -1,17 +1,17 @@
-<div *ngIf="teacherMPKList$ | async as tcrMPKList; else loading" class="container">
-  <div class="container inner-cont p-0">
-    <h3>My Classes</h3>
-    <div class="border-end"></div>
-    <div>
+<div *ngIf="teacherMPKList.length; else loading" class="container">
+  <section>
+    <div class="classes-wrp">
+      <h3>My Classes</h3>
+
       <div
-        *ngFor="let tcrMPK of tcrMPKList"
+        *ngFor="let tcrMPK of teacherMPKList"
         [routerLink]="['/teacher_dashboard/' + tcrMPK.klassId]"
         class="tcr-mpk shadow rounded mb-3"
       >
         <h5 class="bg-gradient text-white m-0 p-4 rounded-top" [style.backgroundColor]="tcrMPK.renderColor">
           Class: {{ tcrMPK.klassId }}, {{ tcrMPK.klassCourse }}
         </h5>
-        <p class="m-0 px-4 py-2">
+        <p class="bg-white m-0 px-4 py-2">
           Taught modules:
           <span *ngFor="let module of tcrMPK.modules; let isLast = last">
             {{ module }}<span *ngIf="!isLast">, </span>
@@ -19,7 +19,9 @@
         </p>
       </div>
     </div>
-  </div>
+
+    <app-calendar *ngIf="weeklySchedule.length" [weeklySchedule]="weeklySchedule" class="bg-white rounded shadow"></app-calendar>
+  </section>
 </div>
 
 <ng-template #loading>
