--- a/schoolFrontend/src/app/pages/teacher-dashboard/teacher-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/teacher-dashboard/teacher-dashboard.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <app-calendar *ngIf="weeklySchedule.length" [weeklySchedule]="weeklySchedule" class="bg-white rounded shadow"></app-calendar>
+    <app-calendar [weeklySchedule]="weeklySchedule" class="bg-white rounded shadow"></app-calendar>
   </section>
 </div>
 
