Added unlisteners to calendar dragging

--- a/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
+++ b/schoolFrontend/src/app/pages/student-dashboard/student-dashboard.component.html
@@ -9,7 +9,7 @@
 
       <app-calendar
         [weeklySchedule]="klass.weeklySchedule"
-        [showClass]="false"
+        [showKlass]="false"
         class="bg-white rounded shadow fake-border"
       ></app-calendar>
 
