--- a/schoolFrontend/src/app/components/calendar/calendar.component.html
+++ b/schoolFrontend/src/app/components/calendar/calendar.component.html
@@ -57,7 +57,7 @@
         *ngFor="let scheItem of daySchedule; let i = index"
         [ngClass]="{ 'd-none': days | pureFn : lessonCondition : scheItem }"
       >
-        <span *ngIf="showClass" class="fw-bold"> Class: {{ scheItem.klass.id }} </span>
+        <span *ngIf="showKlass" class="fw-bold"> Class: {{ scheItem.klass.id }} </span>
         <span> {{ scheItem.module.name }} </span>
       </div>
     </div>
